--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ mysql-connector-python==8.1.0
 mysqlclient==2.1.1
 passlib==1.7.4
 protobuf==4.21.12
+psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pycparser==2.21
 pydantic==2.3.0
