--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pydantic==2.3.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.3
 Pygments==2.16.1
+PyJWT==2.8.0
 pymongo==4.5.0
 PySocks==1.7.1
 python-dotenv==1.0.0
