--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.12.1
 annotated-types==0.5.0
 anyio==3.7.1
+astropy==5.3.4
 bcrypt==4.0.1
 certifi==2023.7.22
 cffi==1.16.0
@@ -9,14 +10,18 @@ click==8.1.7
 cryptography==41.0.4
 defusedxml==0.7.1
 dnspython==2.4.2
+docstring-parser==0.15
 ecdsa==0.18.0
 email-validator==2.0.0.post2
 exceptiongroup==1.1.3
 fastapi==0.103.1
 greenlet==2.0.2
+gunicorn==21.2.0
 h11==0.14.0
+h5py==3.10.0
 httpcore==0.18.0
 httpie==3.2.2
+httptools==0.6.1
 httpx==0.25.0
 idna==3.4
 Mako==1.2.4
@@ -24,8 +29,8 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 mdurl==0.1.2
 multidict==6.0.4
-mysql-connector-python==8.1.0
-mysqlclient==2.1.1
+numpy==1.26.2
+packaging==23.2
 passlib==1.7.4
 protobuf==4.21.12
 psycopg2-binary==2.9.9
@@ -34,6 +39,7 @@ pycparser==2.21
 pydantic==2.3.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.3
+pyerfa==2.0.1.1
 Pygments==2.16.1
 PyJWT==2.8.0
 pymongo==4.5.0
@@ -41,15 +47,22 @@ PySocks==1.7.1
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
+pyuvdata==2.4.1
+PyYAML==6.0.1
 requests==2.31.0
 requests-toolbelt==1.0.0
 rich==13.5.3
 rsa==4.9
+scipy==1.11.3
+setuptools-scm==8.0.4
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.49
 SQLite4==0.1.1
 starlette==0.27.0
+tomli==2.0.1
 typing_extensions==4.8.0
 urllib3==2.0.5
 uvicorn==0.23.2
+uvloop==0.19.0
+uvtools==0.2.0
